<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2013 Yoshihiro Miyama

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textFuncBattery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/func_title"
        android:ems="10"
        android:paddingLeft="5dp"
        android:text="@string/label_func_battery"
        android:textColor="#ffffcc"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textBatteryDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lines_description"
        android:padding="5dp"
        android:text="@string/desc_battery_setting"
        android:textColor="#cccccc"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textEnabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/lines_sub_description"
        android:text="@string/desc_enabled_sub"
        android:textColor="#cccccc"
        android:textSize="17sp" />

    <ToggleButton
        android:id="@+id/toggleBattery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/state_button"
        android:paddingBottom="3dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="3dp"
        android:textColor="#ffffcc"
        android:textOff="@string/desc_battery_func_disabled"
        android:textOn="@string/desc_battery_func_enabled"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textThresholdDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/lines_sub_description"
        android:text="@string/desc_threshold_sub"
        android:textColor="#cccccc"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textThreshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="--%"
            android:textSize="17sp" />

        <SeekBar
            android:id="@+id/seekBattery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>