<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2013 Yoshihiro Miyama

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center|left|top"
    android:orientation="vertical" >


        <LinearLayout
            android:id="@+id/layoutEcoSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textEcoSettingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/lines_sub_description"
                android:text="@string/label_setting_items"
                android:textColor="#cccccc"
                android:textSize="17sp" />

            <!-- WiFi Setting -->

            <LinearLayout
                android:id="@+id/layoutWifi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/state_eco_settings" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_menu_more" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textWifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_wifi"
                        android:textColor="#cccccc"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textWifiDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_wifi_desc"
                        android:textColor="#cccccc"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Bluetooth Setting -->

            <LinearLayout
                android:id="@+id/layoutBluetooth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/state_eco_settings" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_menu_more" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textBluetooth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_bluetooth"
                        android:textColor="#cccccc"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textBluetoothDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_bluetooth_desc"
                        android:textColor="#cccccc"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Rotate Setting -->

            <LinearLayout
                android:id="@+id/layoutRotate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/state_eco_settings" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_menu_more" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textRotate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_rotate"
                        android:textColor="#cccccc"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textRotateDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_rotate_desc"
                        android:textColor="#cccccc"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Sync Setting -->

            <LinearLayout
                android:id="@+id/layoutSync"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/state_eco_settings" >

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_menu_more" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textSync"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_sync"
                        android:textColor="#cccccc"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textSyncDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_sync_desc"
                        android:textColor="#cccccc"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Silent Mode Setting -->

            <LinearLayout
                android:id="@+id/layoutSilent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/state_eco_settings" >

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_menu_more" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textSilent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_silent"
                        android:textColor="#cccccc"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textSilentDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_silent_desc"
                        android:textColor="#cccccc"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Brightness Setting -->

            <LinearLayout
                android:id="@+id/layoutBrightness"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/state_eco_settings" >

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_menu_more" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textBrightness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_brightness"
                        android:textColor="#cccccc"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textBrightnessDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_brightness_desc"
                        android:textColor="#cccccc"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Sleep Setting -->

            <LinearLayout
                android:id="@+id/layoutSleep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/state_eco_settings" >

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_menu_more" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textSleep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_sleep"
                        android:textColor="#cccccc"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/textSleepDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setting_sleep_desc"
                        android:textColor="#cccccc"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>